# api_project_blent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: Structure des données.md  schema.sql
src/: app.py  db_init.py  models.py  utils.py
src/routes/: auth_routes.py  order_routes.py  product_routes.py
src/swagger/auth/: login.yml  register.yml
src/swagger/orders/: create.yml  get_lines.yml  get_one.yml  list.yml  update_status.yml
src/swagger/products/: create.yml  delete.yml  get_one.yml  list.yml  search.yml  update.yml
src/utils/: __init__.py
src/viz/: __init__.py
tests/: conftest.py  test_auth.py  test_orders.py  test_placeholder.py  test_products.py  test_utils.py
