[project]
name = "API_Project_Blent"
version = "0.1.0"
description = "Projet API du parcours Blent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Arnaud Duigou", email = "arnaud.duigou@data-boost.fr" },
]
dependencies = [
    "flask==3.1.3",
    "flask-sqlalchemy==3.1.1",
    "sqlalchemy==2.0.48",
    "pyjwt==2.12.1",
    "werkzeug==3.1.7",
    "requests==2.33.1",
    "python-dotenv==1.2.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "flasgger>=0.9.7.1",
    "gunicorn>=21.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-flask==1.3.0",
    "pytest-cov==7.1.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---- Ruff (linter + formatter) ----
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", "data", "outputs"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "UP",       # pyupgrade
    "N",        # pep8-naming
    "SIM",      # simplify
    "RUF",      # ruff-specific
]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---- pytest ----
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers --cov=src --cov-report=term-missing --cov-report=html"
pythonpath = [".", "tests"]

# ---- mypy ----
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
